Fix llvm/polly build for --disable-shared
Fix POLLY_LIB when both gmp and cloog are built with --disable-shared.
The reasons for --disable-shared are:
1. gmp can't be built in MacOSX without it
2. dynamic gmp and cloog libraries need user's explicit overriding
   LD_LIBRARY_PATH

Change-Id: I2604011f08d1910d9e983f9a4002a71d07f2e1be

--- a/tools/polly/Makefile.config.in
+++ b/tools/polly/Makefile.config.in
@@ -39,4 +39,4 @@ POLLY_INC :=  @gmp_inc@ @isl_inc@ \
 
 POLLY_LD := @gmp_ld@ @isl_ld@ @cloog_ld@ @openscop_ld@ @scoplib_ld@ @scoplib_rpath@
 
-POLLY_LIB := @gmp_lib@ @isl_lib@ @cloog_lib@ @openscop_lib@ @scoplib_lib@
+POLLY_LIB := @gmp_lib@ @isl_lib@ @cloog_lib@ @isl_lib@ @gmp_lib@ @openscop_lib@ @scoplib_lib@
